Added namespace to translation keys

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,67 +1,67 @@
 {
-  "Attributes.Dexterity": "Dexterity",
-  "Attributes.Intelligence": "Intelligence",
-  "Attributes.Resilience": "Resilience",
-  "Attributes.Strength": "Strength",
-  "Classes.Archer": "Archer",
-  "Classes.Ardent": "Ardent",
-  "Classes.Atlanta": "Atlanta",
-  "Classes.Druid": "Druid",
-  "Classes.Invoker": "Invoker",
-  "Classes.Rogue": "Rogue",
-  "Classes.Spiritualist": "Spiritualist",
-  "Classes.Tactician": "Tactician",
-  "Classes.Warrior": "Warrior",
-  "Maneuvers.Analyze.Desc": "Make a Skill Check. If you succeed, +3 P to your next Action. 1 Stack.",
-  "Maneuvers.Analyze.Name": "Analyze",
-  "Maneuvers.Betray.Desc": "Make a Skill Check. If you succeed, Target Foe is OFF-GUARD until your next Turn.",
-  "Maneuvers.Betray.Name": "Betray",
-  "Maneuvers.Daunt.Desc": "When you use a Move Action, you may make a Skill Check. If you succeed, you may pass through Squares Occupied by Foes during that Action.",
-  "Maneuvers.Daunt.Name": "Daunt",
-  "Maneuvers.Fade.Desc": "Make a Skill Check. If you succeed, Foes cannot Target you until your next Turn.",
-  "Maneuvers.Fade.Name": "Fade",
-  "Maneuvers.Feint.Desc": "Make a Skill Check. If you succeed, +2 A to your next Action. 1 Stack.",
-  "Maneuvers.Feint.Name": "Feint",
-  "Maneuvers.Focus.Desc": "Make a Skill Check. If you succeed, +1 Healing or Damage Die to your next Action. 1 Stack.",
-  "Maneuvers.Focus.Name": "Focus",
-  "Maneuvers.Guide.Desc": "Make a Skill Check. If you succeed, 1 Other Hero gains Advantage on his or her next Roll. 1 Stack.",
-  "Maneuvers.Guide.Name": "Guide",
-  "Maneuvers.Optimize.Desc": "Make a Skill Check. If you succeed, you may convert A into P at a ratio of 2:1 or vice versa. Optimize and its Effect is removed if you become FALLEN or at the end of the Encounter.",
-  "Maneuvers.Optimize.Name": "Optimize",
-  "Maneuvers.Refresh.Desc": "Make a Skill Check. If you succeed, heal [Tier]+4 HP.",
-  "Maneuvers.Refresh.Name": "Refresh",
-  "Maneuvers.Spring.Desc": "When you use a Shift Action while adjacent to a Foe, make a Skill Check. If you succeed, +2 Squares to that Action.",
-  "Maneuvers.Spring.Name": "Spring",
-  "Maneuvers.Study.Desc": "Make a Skill Check. If you succeed, you may look at 1 Foe's Hex Grid, Default Characteristics, or Special Abilities Table.",
-  "Maneuvers.Study.Name": "Study",
-  "Maneuvers.StudyVariant.Desc": "Make a Skill Check. If you succeed, you may look at 1 Foe's Foe Card.",
-  "Maneuvers.StudyVariant.Name": "Study (Variant)",
-  "Maneuvers.Tumble.Desc": "Move 1-3 Squares. Can move through any Combatant.",
-  "Maneuvers.Tumble.Name": "Tumble",
-  "Maneuvers.Vault.Desc": "Make a Skill Check. If you succeed, your next Move Action can be used to traverse terrain vertically. Your Move Action must end on a Square you can Occupy.",
-  "Maneuvers.Vault.Name": "Vault",
-  "Maneuvers.Weather.Desc": "When you enter a Square with a Local Field Effect, you may make a Skill Check. If you succeed, ignore the Local Field Effect.",
-  "Maneuvers.Weather.Name": "Weather",
-  "Skills.Acrobatics": "Acrobatics",
-  "Skills.Athletics": "Athletics",
-  "Skills.Endurance": "Endurance",
-  "Skills.FastTalk": "Fast-Talk",
-  "Skills.Focus": "Focus",
-  "Skills.Insight": "Insight",
-  "Skills.Intimidate": "Intimidate",
-  "Skills.Knowledge": "Knowledge",
-  "Skills.Leadership": "Leadership",
-  "Skills.Mend": "Mend",
-  "Skills.SleightOfHand": "Sleight of Hand",
-  "Skills.Stealth": "Stealth",
-  "Equipment.Sword": "Sword [$1H]",
-  "Equipment.Mace": "Mace [$1H]",
-  "Equipment.Axe": "Axe [$1H]",
-  "Equipment.Polearm": "Pole-arm [$1H]",
-  "Equipment.Sceptre": "Sceptre [$1H]",
-  "Equipment.Staff": "Stagg [$1H]",
-  "Equipment.LightShield": "Light Shield",
-  "Equipment.MediumShield": "Medium Shield",
-  "Equipment.HeavyShield": "Heavy Shield",
-  "Equipment.OffHandWeapon": "Off-hand Weapon",
+  "emberwind.Attributes.Dexterity": "Dexterity",
+  "emberwind.Attributes.Intelligence": "Intelligence",
+  "emberwind.Attributes.Resilience": "Resilience",
+  "emberwind.Attributes.Strength": "Strength",
+  "emberwind.Classes.Archer": "Archer",
+  "emberwind.Classes.Ardent": "Ardent",
+  "emberwind.Classes.Atlanta": "Atlanta",
+  "emberwind.Classes.Druid": "Druid",
+  "emberwind.Classes.Invoker": "Invoker",
+  "emberwind.Classes.Rogue": "Rogue",
+  "emberwind.Classes.Spiritualist": "Spiritualist",
+  "emberwind.Classes.Tactician": "Tactician",
+  "emberwind.Classes.Warrior": "Warrior",
+  "emberwind.Maneuvers.Analyze.Desc": "Make a Skill Check. If you succeed, +3 P to your next Action. 1 Stack.",
+  "emberwind.Maneuvers.Analyze.Name": "Analyze",
+  "emberwind.Maneuvers.Betray.Desc": "Make a Skill Check. If you succeed, Target Foe is OFF-GUARD until your next Turn.",
+  "emberwind.Maneuvers.Betray.Name": "Betray",
+  "emberwind.Maneuvers.Daunt.Desc": "When you use a Move Action, you may make a Skill Check. If you succeed, you may pass through Squares Occupied by Foes during that Action.",
+  "emberwind.Maneuvers.Daunt.Name": "Daunt",
+  "emberwind.Maneuvers.Fade.Desc": "Make a Skill Check. If you succeed, Foes cannot Target you until your next Turn.",
+  "emberwind.Maneuvers.Fade.Name": "Fade",
+  "emberwind.Maneuvers.Feint.Desc": "Make a Skill Check. If you succeed, +2 A to your next Action. 1 Stack.",
+  "emberwind.Maneuvers.Feint.Name": "Feint",
+  "emberwind.Maneuvers.Focus.Desc": "Make a Skill Check. If you succeed, +1 Healing or Damage Die to your next Action. 1 Stack.",
+  "emberwind.Maneuvers.Focus.Name": "Focus",
+  "emberwind.Maneuvers.Guide.Desc": "Make a Skill Check. If you succeed, 1 Other Hero gains Advantage on his or her next Roll. 1 Stack.",
+  "emberwind.Maneuvers.Guide.Name": "Guide",
+  "emberwind.Maneuvers.Optimize.Desc": "Make a Skill Check. If you succeed, you may convert A into P at a ratio of 2:1 or vice versa. Optimize and its Effect is removed if you become FALLEN or at the end of the Encounter.",
+  "emberwind.Maneuvers.Optimize.Name": "Optimize",
+  "emberwind.Maneuvers.Refresh.Desc": "Make a Skill Check. If you succeed, heal [Tier]+4 HP.",
+  "emberwind.Maneuvers.Refresh.Name": "Refresh",
+  "emberwind.Maneuvers.Spring.Desc": "When you use a Shift Action while adjacent to a Foe, make a Skill Check. If you succeed, +2 Squares to that Action.",
+  "emberwind.Maneuvers.Spring.Name": "Spring",
+  "emberwind.Maneuvers.Study.Desc": "Make a Skill Check. If you succeed, you may look at 1 Foe's Hex Grid, Default Characteristics, or Special Abilities Table.",
+  "emberwind.Maneuvers.Study.Name": "Study",
+  "emberwind.Maneuvers.StudyVariant.Desc": "Make a Skill Check. If you succeed, you may look at 1 Foe's Foe Card.",
+  "emberwind.Maneuvers.StudyVariant.Name": "Study (Variant)",
+  "emberwind.Maneuvers.Tumble.Desc": "Move 1-3 Squares. Can move through any Combatant.",
+  "emberwind.Maneuvers.Tumble.Name": "Tumble",
+  "emberwind.Maneuvers.Vault.Desc": "Make a Skill Check. If you succeed, your next Move Action can be used to traverse terrain vertically. Your Move Action must end on a Square you can Occupy.",
+  "emberwind.Maneuvers.Vault.Name": "Vault",
+  "emberwind.Maneuvers.Weather.Desc": "When you enter a Square with a Local Field Effect, you may make a Skill Check. If you succeed, ignore the Local Field Effect.",
+  "emberwind.Maneuvers.Weather.Name": "Weather",
+  "emberwind.Skills.Acrobatics": "Acrobatics",
+  "emberwind.Skills.Athletics": "Athletics",
+  "emberwind.Skills.Endurance": "Endurance",
+  "emberwind.Skills.FastTalk": "Fast-Talk",
+  "emberwind.Skills.Focus": "Focus",
+  "emberwind.Skills.Insight": "Insight",
+  "emberwind.Skills.Intimidate": "Intimidate",
+  "emberwind.Skills.Knowledge": "Knowledge",
+  "emberwind.Skills.Leadership": "Leadership",
+  "emberwind.Skills.Mend": "Mend",
+  "emberwind.Skills.SleightOfHand": "Sleight of Hand",
+  "emberwind.Skills.Stealth": "Stealth",
+  "emberwind.Equipment.Sword": "Sword [$1H]",
+  "emberwind.Equipment.Mace": "Mace [$1H]",
+  "emberwind.Equipment.Axe": "Axe [$1H]",
+  "emberwind.Equipment.Polearm": "Pole-arm [$1H]",
+  "emberwind.Equipment.Sceptre": "Sceptre [$1H]",
+  "emberwind.Equipment.Staff": "Stagg [$1H]",
+  "emberwind.Equipment.LightShield": "Light Shield",
+  "emberwind.Equipment.MediumShield": "Medium Shield",
+  "emberwind.Equipment.HeavyShield": "Heavy Shield",
+  "emberwind.Equipment.OffHandWeapon": "Off-hand Weapon",
 }
