Lang file progress

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,8 +1,40 @@
 {
+  "emberwind.ActionPool": "Action Pool",
+  "emberwind.ActionPool.Fast": "Fast Action: Check 1",
+  "emberwind.ActionPool.Slow": "Slow Action: Check 2",
+  "emberwind.Actions.Basic": "Basic Actions",
+  "emberwind.Actions.Class": "Class Actions",
+  "emberwind.Actions.Effect": "Effect",
+  "emberwind.Actions.Maneuver": "Maneuver",
+  "emberwind.Actions.ManeuverNote": "You cannot end your Maneuver in an Occupied Square.",
+  "emberwind.Actions.Movement": "Movement",
+  "emberwind.Actions.MovementNote": "You cannot end your Movement in an Occupied Square.",
+  "emberwind.Actions.Name": "Name",
+  "emberwind.Actions.Range": "Range",
+  "emberwind.Actions.Speed": "Speed",
+  "emberwind.Actions.Target": "Target",
+  "emberwind.Actions.TideTurner": "Class Tide-Turner Actions",
+  "emberwind.Actions.Type": "Type",
+  "emberwind.Aspects": "Aspects",
+  "emberwind.Aspects.Defensive": "Defensive",
+  "emberwind.Aspects.Offensive": "Offensive",
+  "emberwind.Aspects.Utility": "Utility",
   "emberwind.Attributes.Dexterity": "Dexterity",
   "emberwind.Attributes.Intelligence": "Intelligence",
   "emberwind.Attributes.Resilience": "Resilience",
   "emberwind.Attributes.Strength": "Strength",
+  "emberwind.Barrier": "Barrier Values",
+  "emberwind.Barrier.Resistance": "Resistance",
+  "emberwind.Barrier.Toughness": "Toughness",
+  "emberwind.CAP.A": "A",
+  "emberwind.CAP.Accuracy": "Accuracy",
+  "emberwind.CAP.Check": "CAP Check",
+  "emberwind.CAP.C": "C",
+  "emberwind.CAP.Critical": "Critical",
+  "emberwind.CAP.P": "P",
+  "emberwind.CAP.Penetration": "Penetration",
+  "emberwind.CAP.Value": "CAP Value",
+  "emberwind.Class": "Class",
   "emberwind.Classes.Archer": "Archer",
   "emberwind.Classes.Ardent": "Ardent",
   "emberwind.Classes.Atlanta": "Atlanta",
@@ -12,36 +44,14 @@
   "emberwind.Classes.Spiritualist": "Spiritualist",
   "emberwind.Classes.Tactician": "Tactician",
   "emberwind.Classes.Warrior": "Warrior",
-  "emberwind.Maneuvers.Analyze.Desc": "Make a Skill Check. If you succeed, +3 P to your next Action. 1 Stack.",
-  "emberwind.Maneuvers.Analyze.Name": "Analyze",
-  "emberwind.Maneuvers.Betray.Desc": "Make a Skill Check. If you succeed, Target Foe is OFF-GUARD until your next Turn.",
-  "emberwind.Maneuvers.Betray.Name": "Betray",
-  "emberwind.Maneuvers.Daunt.Desc": "When you use a Move Action, you may make a Skill Check. If you succeed, you may pass through Squares Occupied by Foes during that Action.",
-  "emberwind.Maneuvers.Daunt.Name": "Daunt",
-  "emberwind.Maneuvers.Fade.Desc": "Make a Skill Check. If you succeed, Foes cannot Target you until your next Turn.",
-  "emberwind.Maneuvers.Fade.Name": "Fade",
-  "emberwind.Maneuvers.Feint.Desc": "Make a Skill Check. If you succeed, +2 A to your next Action. 1 Stack.",
-  "emberwind.Maneuvers.Feint.Name": "Feint",
-  "emberwind.Maneuvers.Focus.Desc": "Make a Skill Check. If you succeed, +1 Healing or Damage Die to your next Action. 1 Stack.",
-  "emberwind.Maneuvers.Focus.Name": "Focus",
-  "emberwind.Maneuvers.Guide.Desc": "Make a Skill Check. If you succeed, 1 Other Hero gains Advantage on his or her next Roll. 1 Stack.",
-  "emberwind.Maneuvers.Guide.Name": "Guide",
-  "emberwind.Maneuvers.Optimize.Desc": "Make a Skill Check. If you succeed, you may convert A into P at a ratio of 2:1 or vice versa. Optimize and its Effect is removed if you become FALLEN or at the end of the Encounter.",
-  "emberwind.Maneuvers.Optimize.Name": "Optimize",
-  "emberwind.Maneuvers.Refresh.Desc": "Make a Skill Check. If you succeed, heal [Tier]+4 HP.",
-  "emberwind.Maneuvers.Refresh.Name": "Refresh",
-  "emberwind.Maneuvers.Spring.Desc": "When you use a Shift Action while adjacent to a Foe, make a Skill Check. If you succeed, +2 Squares to that Action.",
-  "emberwind.Maneuvers.Spring.Name": "Spring",
-  "emberwind.Maneuvers.Study.Desc": "Make a Skill Check. If you succeed, you may look at 1 Foe's Hex Grid, Default Characteristics, or Special Abilities Table.",
-  "emberwind.Maneuvers.Study.Name": "Study",
-  "emberwind.Maneuvers.StudyVariant.Desc": "Make a Skill Check. If you succeed, you may look at 1 Foe's Foe Card.",
-  "emberwind.Maneuvers.StudyVariant.Name": "Study (Variant)",
-  "emberwind.Maneuvers.Tumble.Desc": "Move 1-3 Squares. Can move through any Combatant.",
-  "emberwind.Maneuvers.Tumble.Name": "Tumble",
-  "emberwind.Maneuvers.Vault.Desc": "Make a Skill Check. If you succeed, your next Move Action can be used to traverse terrain vertically. Your Move Action must end on a Square you can Occupy.",
-  "emberwind.Maneuvers.Vault.Name": "Vault",
-  "emberwind.Maneuvers.Weather.Desc": "When you enter a Square with a Local Field Effect, you may make a Skill Check. If you succeed, ignore the Local Field Effect.",
-  "emberwind.Maneuvers.Weather.Name": "Weather",
+  "emberwind.Defence": "Defence Values",
+  "emberwind.Defence.Dodge": "Dodge",
+  "emberwind.Defence.Willpower": "Willpower",
+  "emberwind.Info.EXP": "EXP",
+  "emberwind.Info.HP": "HP",
+  "emberwind.Info.Name": "Name",
+  "emberwind.Info.Tier": "Tier",
+  "emberwind.Skills": "Skills",
   "emberwind.Skills.Acrobatics": "Acrobatics",
   "emberwind.Skills.Athletics": "Athletics",
   "emberwind.Skills.Endurance": "Endurance",
@@ -54,14 +64,9 @@
   "emberwind.Skills.Mend": "Mend",
   "emberwind.Skills.SleightOfHand": "Sleight of Hand",
   "emberwind.Skills.Stealth": "Stealth",
-  "emberwind.Equipment.Sword": "Sword [$1H]",
-  "emberwind.Equipment.Mace": "Mace [$1H]",
-  "emberwind.Equipment.Axe": "Axe [$1H]",
-  "emberwind.Equipment.Polearm": "Pole-arm [$1H]",
-  "emberwind.Equipment.Sceptre": "Sceptre [$1H]",
-  "emberwind.Equipment.Staff": "Stagg [$1H]",
-  "emberwind.Equipment.LightShield": "Light Shield",
-  "emberwind.Equipment.MediumShield": "Medium Shield",
-  "emberwind.Equipment.HeavyShield": "Heavy Shield",
-  "emberwind.Equipment.OffHandWeapon": "Off-hand Weapon",
+  "emberwind.SpecialActionLimits": "Special Action Limits",
+  "emberwind.SpecialActionLimits.Amplify": "Amplify",
+  "emberwind.SpecialActionLimits.Sustain": "Sustain",
+  "emberwind.SpecialActionLimits.Trigger": "Trigger",
+  "emberwind.Subclass": "Subclass",
 }
