Removed trailing comma

--- a/lang/en.json
+++ b/lang/en.json
@@ -68,5 +68,5 @@
   "emberwind.SpecialActionLimits.Amplify": "Amplify",
   "emberwind.SpecialActionLimits.Sustain": "Sustain",
   "emberwind.SpecialActionLimits.Trigger": "Trigger",
-  "emberwind.Subclass": "Subclass",
+  "emberwind.Subclass": "Subclass"
 }
