Made all keys into the format of "system.StringName"

--- a/lang/en.json
+++ b/lang/en.json
@@ -1,72 +1,72 @@
 {
   "emberwind.ActionPool": "Action Pool",
-  "emberwind.ActionPool.Fast": "Fast Action: Check 1",
-  "emberwind.ActionPool.Slow": "Slow Action: Check 2",
-  "emberwind.Actions.Basic": "Basic Actions",
-  "emberwind.Actions.Class": "Class Actions",
-  "emberwind.Actions.Effect": "Effect",
-  "emberwind.Actions.Maneuver": "Maneuver",
-  "emberwind.Actions.ManeuverNote": "You cannot end your Maneuver in an Occupied Square.",
-  "emberwind.Actions.Movement": "Movement",
-  "emberwind.Actions.MovementNote": "You cannot end your Movement in an Occupied Square.",
-  "emberwind.Actions.Name": "Name",
-  "emberwind.Actions.Range": "Range",
-  "emberwind.Actions.Speed": "Speed",
-  "emberwind.Actions.Target": "Target",
-  "emberwind.Actions.TideTurner": "Class Tide-Turner Actions",
-  "emberwind.Actions.Type": "Type",
+  "emberwind.ActionPoolFast": "Fast Action: Check 1",
+  "emberwind.ActionPoolSlow": "Slow Action: Check 2",
+  "emberwind.ActionsBasic": "Basic Actions",
+  "emberwind.ActionsClass": "Class Actions",
+  "emberwind.ActionsEffect": "Effect",
+  "emberwind.ActionsManeuver": "Maneuver",
+  "emberwind.ActionsManeuverNote": "You cannot end your Maneuver in an Occupied Square.",
+  "emberwind.ActionsMovement": "Movement",
+  "emberwind.ActionsMovementNote": "You cannot end your Movement in an Occupied Square.",
+  "emberwind.ActionsName": "Name",
+  "emberwind.ActionsRange": "Range",
+  "emberwind.ActionsSpeed": "Speed",
+  "emberwind.ActionsTarget": "Target",
+  "emberwind.ActionsTideTurner": "Class Tide-Turner Actions",
+  "emberwind.ActionsType": "Type",
   "emberwind.Aspects": "Aspects",
-  "emberwind.Aspects.Defensive": "Defensive",
-  "emberwind.Aspects.Offensive": "Offensive",
-  "emberwind.Aspects.Utility": "Utility",
-  "emberwind.Attributes.Dexterity": "Dexterity",
-  "emberwind.Attributes.Intelligence": "Intelligence",
-  "emberwind.Attributes.Resilience": "Resilience",
-  "emberwind.Attributes.Strength": "Strength",
+  "emberwind.AspectsDefensive": "Defensive",
+  "emberwind.AspectsOffensive": "Offensive",
+  "emberwind.AspectsUtility": "Utility",
+  "emberwind.AttributesDexterity": "Dexterity",
+  "emberwind.AttributesIntelligence": "Intelligence",
+  "emberwind.AttributesResilience": "Resilience",
+  "emberwind.AttributesStrength": "Strength",
   "emberwind.Barrier": "Barrier Values",
-  "emberwind.Barrier.Resistance": "Resistance",
-  "emberwind.Barrier.Toughness": "Toughness",
-  "emberwind.CAP.A": "A",
-  "emberwind.CAP.Accuracy": "Accuracy",
-  "emberwind.CAP.Check": "CAP Check",
-  "emberwind.CAP.C": "C",
-  "emberwind.CAP.Critical": "Critical",
-  "emberwind.CAP.P": "P",
-  "emberwind.CAP.Penetration": "Penetration",
-  "emberwind.CAP.Value": "CAP Value",
+  "emberwind.BarrierResistance": "Resistance",
+  "emberwind.BarrierToughness": "Toughness",
+  "emberwind.CAPA": "A",
+  "emberwind.CAPAccuracy": "Accuracy",
+  "emberwind.CAPCheck": "CAP Check",
+  "emberwind.CAPC": "C",
+  "emberwind.CAPCritical": "Critical",
+  "emberwind.CAPP": "P",
+  "emberwind.CAPPenetration": "Penetration",
+  "emberwind.CAPValue": "CAP Value",
   "emberwind.Class": "Class",
-  "emberwind.Classes.Archer": "Archer",
-  "emberwind.Classes.Ardent": "Ardent",
-  "emberwind.Classes.Atlanta": "Atlanta",
-  "emberwind.Classes.Druid": "Druid",
-  "emberwind.Classes.Invoker": "Invoker",
-  "emberwind.Classes.Rogue": "Rogue",
-  "emberwind.Classes.Spiritualist": "Spiritualist",
-  "emberwind.Classes.Tactician": "Tactician",
-  "emberwind.Classes.Warrior": "Warrior",
+  "emberwind.ClassesArcher": "Archer",
+  "emberwind.ClassesArdent": "Ardent",
+  "emberwind.ClassesAtlanta": "Atlanta",
+  "emberwind.ClassesDruid": "Druid",
+  "emberwind.ClassesInvoker": "Invoker",
+  "emberwind.ClassesRogue": "Rogue",
+  "emberwind.ClassesSpiritualist": "Spiritualist",
+  "emberwind.ClassesTactician": "Tactician",
+  "emberwind.ClassesWarrior": "Warrior",
   "emberwind.Defence": "Defence Values",
-  "emberwind.Defence.Dodge": "Dodge",
-  "emberwind.Defence.Willpower": "Willpower",
-  "emberwind.Info.EXP": "EXP",
-  "emberwind.Info.HP": "HP",
-  "emberwind.Info.Name": "Name",
-  "emberwind.Info.Tier": "Tier",
+  "emberwind.DefenceDodge": "Dodge",
+  "emberwind.DefenceWillpower": "Willpower",
+  "emberwind.InfoEXP": "EXP",
+  "emberwind.InfoHP": "HP",
+  "emberwind.InfoName": "Name",
+  "emberwind.InfoTier": "Tier",
   "emberwind.Skills": "Skills",
-  "emberwind.Skills.Acrobatics": "Acrobatics",
-  "emberwind.Skills.Athletics": "Athletics",
-  "emberwind.Skills.Endurance": "Endurance",
-  "emberwind.Skills.FastTalk": "Fast-Talk",
-  "emberwind.Skills.Focus": "Focus",
-  "emberwind.Skills.Insight": "Insight",
-  "emberwind.Skills.Intimidate": "Intimidate",
-  "emberwind.Skills.Knowledge": "Knowledge",
-  "emberwind.Skills.Leadership": "Leadership",
-  "emberwind.Skills.Mend": "Mend",
-  "emberwind.Skills.SleightOfHand": "Sleight of Hand",
-  "emberwind.Skills.Stealth": "Stealth",
+  "emberwind.SkillsAcrobatics": "Acrobatics",
+  "emberwind.SkillsAthletics": "Athletics",
+  "emberwind.SkillsEndurance": "Endurance",
+  "emberwind.SkillsFastTalk": "Fast-Talk",
+  "emberwind.SkillsFocus": "Focus",
+  "emberwind.SkillsInsight": "Insight",
+  "emberwind.SkillsIntimidate": "Intimidate",
+  "emberwind.SkillsKnowledge": "Knowledge",
+  "emberwind.SkillsLeadership": "Leadership",
+  "emberwind.SkillsMend": "Mend",
+  "emberwind.SkillsSleightOfHand": "Sleight of Hand",
+  "emberwind.SkillsStealth": "Stealth",
   "emberwind.SpecialActionLimits": "Special Action Limits",
-  "emberwind.SpecialActionLimits.Amplify": "Amplify",
-  "emberwind.SpecialActionLimits.Sustain": "Sustain",
-  "emberwind.SpecialActionLimits.Trigger": "Trigger",
+  "emberwind.SpecialActionLimitsAmplify": "Amplify",
+  "emberwind.SpecialActionLimitsSustain": "Sustain",
+  "emberwind.SpecialActionLimitsTrigger": "Trigger",
   "emberwind.Subclass": "Subclass"
 }
