Added more to the english localization file

--- a/lang/en.json
+++ b/lang/en.json
@@ -2,6 +2,7 @@
   "emberwind.ActionPool": "Action Pool",
   "emberwind.ActionPoolFast": "Fast Action: Check 1",
   "emberwind.ActionPoolSlow": "Slow Action: Check 2",
+  "emberwind.Actions": "Actions",
   "emberwind.ActionsBasic": "Basic Actions",
   "emberwind.ActionsClass": "Class Actions",
   "emberwind.ActionsEffect": "Effect",
@@ -15,6 +16,7 @@
   "emberwind.ActionsTarget": "Target",
   "emberwind.ActionsTideTurner": "Class Tide-Turner Actions",
   "emberwind.ActionsType": "Type",
+  "emberwind.Appearance": "Appearance",
   "emberwind.Aspects": "Aspects",
   "emberwind.AspectsDefensive": "Defensive",
   "emberwind.AspectsOffensive": "Offensive",
@@ -26,6 +28,7 @@
   "emberwind.Barrier": "Barrier Values",
   "emberwind.BarrierResistance": "Resistance",
   "emberwind.BarrierToughness": "Toughness",
+  "emberwind.Bio": "Bio",
   "emberwind.CAPA": "A",
   "emberwind.CAPAccuracy": "Accuracy",
   "emberwind.CAPCheck": "CAP Check",
@@ -44,13 +47,23 @@
   "emberwind.ClassesSpiritualist": "Spiritualist",
   "emberwind.ClassesTactician": "Tactician",
   "emberwind.ClassesWarrior": "Warrior",
+  "emberwind.Conditions": "Conditions",
   "emberwind.Defence": "Defence Values",
   "emberwind.DefenceDodge": "Dodge",
   "emberwind.DefenceWillpower": "Willpower",
+  "emberwind.Description": "Description",
+  "emberwind.History": "History",
+  "emberwind.InfoAge": "Age",
+  "emberwind.InfoBuild": "Build",
   "emberwind.InfoEXP": "EXP",
+  "emberwind.InfoEyes": "Eyes",
+  "emberwind.InfoGender": "Gender",
+  "emberwind.InfoHair": "hair",
+  "emberwind.InfoHeight": "Height",
   "emberwind.InfoHP": "HP",
   "emberwind.InfoName": "Name",
   "emberwind.InfoTier": "Tier",
+  "emberwind.Inventory": "Inventory",
   "emberwind.Skills": "Skills",
   "emberwind.SkillsAcrobatics": "Acrobatics",
   "emberwind.SkillsAthletics": "Athletics",
